--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <ul>
             <li class="list active" data-filter="all">All</li>
             <li class="list" data-filter="graphic">Graphic Design</li>
-            <li class="list" data-filter="uxui">UX/UI</li>
+            <!-- <li class="list" data-filter="uxui">UX/UI</li> --> 
             <li class="list" data-filter="web">Web Design</li>
             <li class="list" data-filter="coding">Programming</li>
           </ul>
