--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="progress-bar">
             <p class="progress-text">
               Python
-              <span>30%</span>%
+              <span>30</span>%
             </p>
             <div class="progress-percent" style="width: 30%;"></div>
           </div>
