--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
       <div class="certificate-container">
         <div class="certificate-column">
           <div class="certificate">
-            <img src="../en/assets/img/Certificates/Accenture Consultant.jpg" alt="Certificate">
+            <img src="../en/assets/img/Certificates/Accentureconsultant.jpg" alt="Certificate">
             <div class="more-info-btn"><a href="https://www.notion.so/elmasaliji/Developer-Program-Accenture-Nordic-eec8c08f12664252bd9a6b27e88eb733">More Info</a></div>
             <h3>Consultant Program </h3>
             <p>Issued by: Accenture</p>
@@ -431,7 +431,7 @@
         </div>
         <div class="certificate-column">
           <div class="certificate">
-            <img src="../en/assets/img/Certificates/ACCENTURE DEVELOPER1024_1.jpg" alt="Certificate">
+            <img src="../en/assets/img/Certificates/ACCENTUREDEVELOPER1024_1.jpg" alt="Certificate">
             <div class="more-info-btn"><a href="https://www.notion.so/elmasaliji/Consultant-Program-Accenture-Nordic-f78bbde30c3843d5ae58a042531ca0f4">More Info</a></div>
             <h3>Developer Program</h3>
             <p>Issued by: Accenture</p>
