--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       <div class="section-title">
         <h2>About</h2>
         <p>Learn more about me</p>
+        <a href="assets/cv/ElmaSaliji.pdf">Check my CV here.</a>
       </div>
       
       <div class="row">
