--- a/de/index.html
+++ b/de/index.html
@@ -76,6 +76,7 @@
       <div class="section-title">
         <h2>Über mich</h2>
         <p>Erfahren Sie mehr über mich</p>
+        <a href="assets/cv/ElmaSaliji - DE.pdf">Überprüfen Sie bitte meinen Lebenslauf hier.</a>
       </div>
       
       <div class="row">
