--- a/de/index.html
+++ b/de/index.html
@@ -423,7 +423,7 @@
       <div class="certificate-container">
         <div class="certificate-column">
           <div class="certificate">
-            <img src="assets/img/Certificates/Accenturecosultant.jpg" alt="Certificate">
+            <img src="assets/img/Certificates/Accenture Consultant.jpg" alt="Certificate">
             <div class="more-info-btn"><a href="https://www.notion.so/elmasaliji/Developer-Program-Accenture-Nordic-eec8c08f12664252bd9a6b27e88eb733">Mehr Info</a></div>
             <h3>Beraterprogramm </h3>
             <p>Ausgestellt von: Accenture</p>
@@ -432,7 +432,7 @@
         </div>
         <div class="certificate-column">
           <div class="certificate">
-            <img src="assets/img/Certificates/ACCENTUREDEVELOPER1024_1.jpg" alt="Certificate">
+            <img src="assets/img/Certificates/ACCENTURE DEVELOPER1024_1.jpg" alt="Certificate">
             <div class="more-info-btn"><a href="https://www.notion.so/elmasaliji/Consultant-Program-Accenture-Nordic-f78bbde30c3843d5ae58a042531ca0f4">Mehr Info</a></div>
             <h3>Entwicklerprogramm</h3>
             <p>Ausgestellt von: Accenture</p>
