--- a/de/index.html
+++ b/de/index.html
@@ -38,7 +38,7 @@
       <h1><a href="index.html">Elma Saliji</a></h1>
       
       <!--<a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-      <h2>Leidenschaftlich im<span> Webdesign</span></h2>
+      <h2><span>Ein Softwareentwickler</span> mit Leidenschaft für <span>Webdesign</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -84,9 +84,9 @@
           <img src="assets/img/avatar.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Web Designer</h3>
+          <h3>Softwareentwickler</h3>
           <p class="fst-italic">
-            Kreativer Webdesigner mit einer Leidenschaft für innovative Technologien.
+            Kreativer Softwareentwickler mit Leidenschaft für Design und zukunftsweisende Technologien.
           </p>
           <div class="row">
             <div class="col-lg-6">
