--- a/de/index.html
+++ b/de/index.html
@@ -84,9 +84,9 @@
           <img src="assets/img/avatar.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Softwareentwickler</h3>
+          <h3>webdesignerin</h3>
           <p class="fst-italic">
-            Kreativer Softwareentwickler mit Leidenschaft für Design und zukunftsweisende Technologien.
+            Kreativer Webdesignerin mit Leidenschaft für zukunftsweisende Technologien.
           </p>
           <div class="row">
             <div class="col-lg-6">
