--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h1><a href="index.html">Elma Saliji</a></h1>
       
       <!--<a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-      <h2>t<span>A software developer</span> who loves <span>web design.</span></h2>
+      <h2><span>A software developer</span> who loves <span>web design.</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -84,9 +84,9 @@
           <img src="assets/img/avatar.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Software developer</h3>
+          <h3>Web Designer</h3>
           <p class="fst-italic">
-            Creative Software Developer with a Passion for Design and Cutting-Edge Technologies
+            Creative Web Designer with a Passion for Cutting-Edge Technologies.
           </p>
           <div class="row">
             <div class="col-lg-6">
