--- a/de/index.html
+++ b/de/index.html
@@ -38,7 +38,7 @@
       <h1><a href="index.html">Elma Saliji</a></h1>
       
       <!--<a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-      <h2><span>Ein Softwareentwickler</span> mit Leidenschaft für <span>Webdesign</span></h2>
+      <h2>Leidenschaftlich für <span>Technologie</span> und<span> Webdesign</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
