--- a/de/index.html
+++ b/de/index.html
@@ -76,7 +76,7 @@
       <div class="section-title">
         <h2>Über mich</h2>
         <p>Erfahren Sie mehr über mich</p>
-        <a href="assets/cv/ElmaSaliji - DE.pdf">Überprüfen Sie bitte meinen Lebenslauf hier.</a>
+        <!-- <a href="assets/cv/ElmaSaliji - DE.pdf">Überprüfen Sie bitte meinen Lebenslauf hier.</a>  -->
       </div>
       
       <div class="row">
@@ -119,7 +119,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Englisch:</strong> <span>Fließend</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Deutsch:</strong> <span>Anfänger</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Deutsch:</strong> <span>Fortgeschritten</span></li>
                 </ul>
               </div>
             </div>
@@ -144,7 +144,7 @@
           
 
             <div class="progress">
-              <span class="skill">Illustrator <i class="val">100%</i></span>
+              <span class="skill">Illustrator <i class="val">96%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -172,7 +172,7 @@
             </div>
   
             <div class="progress">
-              <span class="skill">inVision <i class="val">55%</i></span>
+              <span class="skill">BitBucket <i class="val">65%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -208,14 +208,14 @@
             </div>
   
             <div class="progress">
-              <span class="skill">SQL <i class="val">60%</i></span>
+              <span class="skill">SQL <i class="val">65%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
   
             <div class="progress">
-              <span class="skill">Python<i class="val">45%</i></span>
+              <span class="skill">Python<i class="val">55%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -390,6 +390,19 @@
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Berufserfahrung</h3>
+
+ <div class="resume-item">
+            <h4>Freelance Designer</h4>
+            <h5>Feb, 2023 - Current</h5>
+            <p><em>Remote - Berlin </em></p>
+            <p>
+            <ul>
+              <li>As a freelance professional, I’ve designed responsive websites using HTML, CSS, JavaScript and its Framework, focusing on
+                user-friendly layouts and seamless navigation in Figma. I’ve also worked on improving the functionality and performance of
+                web applications, ensuring a smooth user experience and meeting client needs</li>
+            </ul>
+            </p>
+          </div>
           <div class="resume-item">
             <h4>Marketing-Assistent-Praktikant bei Bisnode BH</h4>
             <h5>Oct, 2019 - Nov, 2019</h5>
