--- a/de/index.html
+++ b/de/index.html
@@ -393,13 +393,11 @@
 
  <div class="resume-item">
             <h4>Freelance Designer</h4>
-            <h5>Feb, 2023 - Current</h5>
+            <h5>Feb, 2023 - Aktuell</h5>
             <p><em>Remote - Berlin </em></p>
             <p>
             <ul>
-              <li>As a freelance professional, I’ve designed responsive websites using HTML, CSS, JavaScript and its Framework, focusing on
-                user-friendly layouts and seamless navigation in Figma. I’ve also worked on improving the functionality and performance of
-                web applications, ensuring a smooth user experience and meeting client needs</li>
+              <li>Als freiberufliche Designerin habe ich responsive Websites mit HTML, CSS, JavaScript und dessen Frameworks entworfen, mit Fokus auf benutzerfreundliche Layouts und nahtlose Navigation in Figma. Zudem habe ich an der Verbesserung der Funktionalität und Leistung von Webanwendungen gearbeitet, um eine reibungslose Benutzererfahrung zu gewährleisten und Kundenanforderungen zu erfüllen.</li>
             </ul>
             </p>
           </div>
@@ -437,7 +435,7 @@
         <div class="certificate-column">
           <div class="certificate">
             <img src="assets/img/Certificates/Accenture Consultant.jpg" alt="Certificate">
-            <div class="more-info-btn"><a href="https://www.notion.so/elmasaliji/Developer-Program-Accenture-Nordic-eec8c08f12664252bd9a6b27e88eb733">Mehr Info</a></div>
+            <div class="more-info-btn"><a href="https://www.notion.so/elmasaliji/Consultant-Program-Accenture-Nordic-f78bbde30c3843d5ae58a042531ca0f4">Mehr Info</a></div>
             <h3>Beraterprogramm </h3>
             <p>Ausgestellt von: Accenture</p>
             <p>Datum: 23.04.2023</p>
@@ -446,7 +444,7 @@
         <div class="certificate-column">
           <div class="certificate">
             <img src="assets/img/Certificates/ACCENTURE DEVELOPER1024_1.jpg" alt="Certificate">
-            <div class="more-info-btn"><a href="https://www.notion.so/elmasaliji/Consultant-Program-Accenture-Nordic-f78bbde30c3843d5ae58a042531ca0f4">Mehr Info</a></div>
+            <div class="more-info-btn"><a href="https://www.notion.so/elmasaliji/Developer-Program-Accenture-Nordic-eec8c08f12664252bd9a6b27e88eb733">Mehr Info</a></div>
             <h3>Entwicklerprogramm</h3>
             <p>Ausgestellt von: Accenture</p>
             <p>Datum: 29.04.2023</p>
